--- a/frontend/src/pages/CSS/Home.module.css
+++ b/frontend/src/pages/CSS/Home.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 
 @font-face {
   font-family: "MyFont";
@@ -26,7 +26,7 @@ body {
   padding-top: 126px;
   color: white;
   /* font-family: system-ui, sans-serif; */
-  font-family: "Quicksand", sans-serif;
+  font-family: "Figtree", sans-serif;
 }
 
 .titleCard {
